--- a/packages/esm-patient-immunizations-app/src/immunizations/immunizationSchedule/immunization-schedule.scss
+++ b/packages/esm-patient-immunizations-app/src/immunizations/immunizationSchedule/immunization-schedule.scss
@@ -3,14 +3,6 @@
   border-radius: 8px;
 }
 
-.title {
-  font-size: 1.75rem;
-  font-weight: 600;
-  margin-bottom: 24px;
-  text-align: center;
-  color: #161616;
-}
-
 .immunizationGrid {
   display: flex;
   justify-content: center;
@@ -36,12 +28,12 @@
   align-items: center;
   margin-bottom: 0;
   border-bottom: 1px solid #e0e0e0;
-  padding: 12px 16px;
 }
 
 .vaccineName {
-  min-width: 220px;
-  max-width: 220px;
+  min-width: 160px;
+  min-height: 100px;
+  max-height: 182px;
   display: flex;
   align-items: center;
   font-size: 16px;
@@ -51,8 +43,9 @@
   left: 0;
   z-index: 1;
   .cds--tile {
-    width: 100%;
-    height: 100%;
+    width: 120px;
+    height: 86px;
+    max-height: 182px;
     padding: 8px 12px;
     border: 1px solid #e0e0e0;
     border-radius: 4px;
@@ -81,7 +74,7 @@
 }
 
 .doseItem {
-  padding: 22px;
+  gap: 8px;
   border-radius: 4px;
   max-width: 120px;
   text-align: center;
