--- a/packages/esm-patient-growth-chart-app/src/growthchart/obs-graph/obs-graph.scss
+++ b/packages/esm-patient-growth-chart-app/src/growthchart/obs-graph/obs-graph.scss
@@ -6,25 +6,25 @@
   @include type.type-style('label-01');
 }
 
-.bodyShort01 {
-  @include type.type-style('body-compact-01');
+.bodyLong01 {
+  @include type.type-style('body-long-01');
 }
 
 .graphContainer {
   display: flex;
-  margin: 0 layout.$spacing-05;
   flex-direction: row;
   justify-content: space-between;
+  margin: 0 layout.$spacing-05;
 }
 
 .conceptPickerTabs {
-  flex-grow: 1;
+  flex: 0 0 200px;
   margin: layout.$spacing-03 0;
   padding-right: layout.$spacing-05;
 }
 
 .lineChartContainer {
-  flex-grow: 4;
+  flex: 1;
   padding: 0 layout.$spacing-05 layout.$spacing-09;
 
   :global(.cds--cc--layout-row) {
@@ -42,6 +42,10 @@
   display: inline-block;
 }
 
+.standardRadioGroup {
+  margin-bottom: layout.$spacing-05;
+}
+
 .verticalTabs {
   margin: layout.$spacing-05 0;
   scroll-behavior: smooth;
@@ -57,6 +61,7 @@
   :global(.cds--tabs--scrollable .cds--tabs--scrollable__nav-link) {
     border-bottom: 0 !important;
     border-left: layout.$spacing-01 solid $color-gray-30;
+    padding: layout.$spacing-03 layout.$spacing-05;
   }
 }
 
